# modded-nanogpt

./: train_gpt.py
data/fast_compress/: Cargo.toml  fast_compress.pyi  pyproject.toml
data/fast_compress/src/: lib.rs  main.rs
