[package]
name = "fast_compress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_compress"
crate-type = ["cdylib"]

[dependencies]
fastset = "0.4.1"
itertools = "0.14.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
rustc-hash = "2.1.1"
